update login, sercurity, appointment, profile user, ... 14/11

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.thymeleaf.cache=false
 # DÒNG M?I C?N THÊM:
 # ? Gi? l?i ?? Spring ch?y data.sql sau khi Hibernate t?o b?ng
 spring.jpa.defer-datasource-initialization=true
+
+# ... các c?u hình c? ...
+server.servlet.session.persistent=false
